fixed gap under submenu that showed up in FF

--- a/src/app/common/directives/quickSearch.less
+++ b/src/app/common/directives/quickSearch.less
@@ -2,6 +2,7 @@
   .form-horizontal .form-group {
     margin-left: 0;
     margin-right: 0;
+    margin-bottom: 0;
   }
   .form-horizontal .has-feedback .form-control-feedback {
     right: 0;
